# heretic

./: README.md  pyproject.toml
src/heretic/: config.py  evaluator.py  main.py  model.py  utils.py
